// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<h3
  className="sc-jKQSiE ekdOob"
>
  Heading
</h3>
`;

exports[`Caption renders colors 1`] = `
Array [
  <h3
    className="sc-jKQSiE ekdOob"
  >
    Default color is Bulma
  </h3>,
  <h3
    className="sc-jKQSiE lhdBtq"
    color="piccolo.100"
  >
    Piccolo
  </h3>,
  <h3
    className="sc-jKQSiE MBa-Do"
    color="trunks.100"
  >
    Trunks
  </h3>,
  <h3
    className="sc-jKQSiE ccublu"
    color="krillin.100"
  >
    Krillin
  </h3>,
]
`;

exports[`Caption renders font-weight 1`] = `
Array [
  <h3
    className="sc-jKQSiE ekdOob"
  >
    Default font-weight is bold
  </h3>,
  <h3
    className="sc-jKQSiE iGWQoG"
  >
    Font-weight is regular
  </h3>,
]
`;

exports[`Caption renders line height 1`] = `
Array [
  <h3
    className="sc-jKQSiE ekdOob"
  >
    Line-height is pre-calculated
  </h3>,
  <h3
    className="sc-jKQSiE iaEeYe"
  >
    Custon line-height
  </h3>,
]
`;

exports[`Caption renders semantic tags 1`] = `
Array [
  <h3
    className="sc-jKQSiE ekdOob"
  >
    H3 is a default tag
  </h3>,
  <h2
    className="sc-jKQSiE ekdOob"
  >
    H2 tag
  </h2>,
  <h6
    className="sc-jKQSiE ekdOob"
  >
    H6 tag
  </h6>,
]
`;

exports[`Caption renders sizes 1`] = `
Array [
  <h3
    className="sc-jKQSiE ekdOob"
  >
    Default font-size is 16px
  </h3>,
  <h3
    className="sc-jKQSiE hLPdak"
    size={24}
  >
    Size is 24px
  </h3>,
  <h3
    className="sc-jKQSiE bkbHqY"
    size={48}
  >
    Size is 48px
  </h3>,
]
`;

exports[`Caption renders text-align 1`] = `
Array [
  <h3
    className="sc-jKQSiE ekdOob"
  >
    Text-align is not specified
  </h3>,
  <h3
    className="sc-jKQSiE htZYbA"
  >
    Centered Heading
  </h3>,
  <h3
    className="sc-jKQSiE jxwczX"
  >
    Right alignment
  </h3>,
]
`;

exports[`Caption renders underline 1`] = `
Array [
  <h3
    className="sc-jKQSiE ekdOob"
  >
    Default text-decoration is none
  </h3>,
  <h3
    className="sc-jKQSiE krBAtW"
  >
    Underline Heading
  </h3>,
]
`;

exports[`Caption renders uppercase 1`] = `
Array [
  <h3
    className="sc-jKQSiE ekdOob"
  >
    Default text-transform is none
  </h3>,
  <h3
    className="sc-jKQSiE fPOVTE"
  >
    Uppercase Heading
  </h3>,
]
`;
